# sqlite-cpp-wrapper

./: .cproject  .project  CMakeLists.txt  README.md  build.sh
include/: Connection.hpp  IConnection.hpp  SqliteConnection.hpp  SqliteDb.hpp  SqliteTraits.hpp  SqliteTypes.hpp  StringUtils.hpp
src/: Connection.cpp  SqliteConnection.cpp  SqliteTraits.cpp  StringUtils.cpp
unit-tests/: CMakeLists.txt  Connection_test.cpp  SqliteConnection_test.cpp
